Fita 1 entregable (Sin solapamientos)
Hay alguna cosa no muy correcta en el main como la instanciacion del Reloj. Se deberia mejorar, pero funciona.